--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -4,7 +4,10 @@
   height: 100%;
   display: flex;
   flex-direction: row;
+  column-gap: 0.5em;
+  place-items: center;
   justify-content: space-between;
+  padding: 0 2em;
 
   a {
     color: $header-text-color;
@@ -12,12 +15,17 @@
   }
 
   h1 {
-    margin: auto 0 auto 5em;
     font-size: x-large;
+    margin-left: 2em;
+    margin-bottom: 0;
     flex: 1 1 25%;
+  }
 
-    @media (width <=550px) {
-      margin-left: 1em;
+  @media (width <= 600px) {
+    padding: 0 0.5em;
+
+    h1 {
+      margin-left: 0.5em;
     }
   }
 
@@ -25,9 +33,8 @@
     height: 100%;
     display: flex;
     flex-flow: row wrap;
-    margin: auto 2em auto 0;
     place-content: center;
-    flex: 1 1 35%;
+    flex: 1 1 20%;
 
     @media (width <= 1250px) {
       flex-basis: 55%;
@@ -41,7 +48,6 @@
     }
 
     @media (width <= 600px) {
-      margin-right: 0;
       column-gap: 0.5em;
       grid-template-columns: 1fr 1fr 1fr;
     }
@@ -71,10 +77,10 @@
       }
 
       @media (width <= 600px) {
-        padding: 0 0.3em;
+        padding: 0 0.2em;
 
         svg {
-          margin-right: 0.2em;
+          margin-right: 0.15em;
         }
       }
     }
