--- a/src/components/profile/Profile.scss
+++ b/src/components/profile/Profile.scss
@@ -1,7 +1,6 @@
 #profile {
   display: flex;
   flex-direction: column;
-  margin-top: 2em;
   gap: 1.5em;
 
   #bio-avatar {
@@ -10,7 +9,7 @@
 
   #bio {
     svg {
-      margin-right: 1rem;
+      margin-right: 0.5rem;
       width: 25px;
     }
 
@@ -61,18 +60,20 @@
     display: grid;
     justify-items: center;
 
+    &.blog-view {
+      display: none;
+    }
+
     #bio,
     .social-link > span {
       display: none;
     }
 
     #social-links {
-      @media (width <= 700px) {
-        flex-direction: row;
-        justify-content: center;
-        margin-top: 0.5em;
-        gap: 1em;
-      }
+      flex-direction: row;
+      justify-content: center;
+      margin-top: 0.5em;
+      gap: 1em;
     }
   }
 }
