--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -77,14 +77,11 @@
 }
 
 html,
-body {
-  width: 100%;
-  height: 100%;
-}
-
+body,
 #___gatsby,
 #gatsby-focus-wrapper {
   height: 100%;
+  width: 100%;
 }
 
 html {
