--- a/src/components/blog/post/Post.scss
+++ b/src/components/blog/post/Post.scss
@@ -2,6 +2,11 @@
   margin-bottom: var(--spacing-8);
   margin-top: var(--spacing-8);
 
+  a {
+    text-decoration: none;
+    color: unset;
+  }
+
   p {
     margin-bottom: var(--spacing-0);
   }
@@ -19,8 +24,20 @@
     margin-bottom: var(--spacing-4);
   }
 
-  .blog-thumbnail {
-    max-height: 300px;
-    max-width: 300px;
+  .article-preview {
+    .blog-thumbnail {
+      max-height: 300px;
+      max-width: 300px;
+    }
+
+    @media (width > 700px) {
+      display: flex;
+      flex-direction: row;
+      column-gap: 1em;
+
+      .description {
+        max-width: 25em;
+      }
+    }
   }
 }
