--- a/src/components/blog/templates/TemplateBlogPost.scss
+++ b/src/components/blog/templates/TemplateBlogPost.scss
@@ -1,6 +1,20 @@
 .blog-post {
-  img {
+  .article-illustration {
     margin: 1em 0;
+  }
+
+  img:not(.article-illustration) {
+    display: flex;
+    margin: 0.2em auto;
+  }
+
+  p {
+    img + em {
+      display: flex;
+      font-size: 0.8rem;
+      color: #4b4545;
+      justify-content: center;
+    }
   }
 
   .blog-post-footer {
