--- a/src/pages/page-styles/cv.scss
+++ b/src/pages/page-styles/cv.scss
@@ -30,8 +30,17 @@
       padding: 0.5em 0;
 
       > * {
-        flex-basis: 50%;
         margin: auto 0;
+
+        &:first-child {
+          flex-basis: 40%;
+        }
+
+        &:last-child {
+          flex-basis: 60%;
+        }
+        
+        
       }
   
       .certifications-logos {
