--- a/src/pages/page-styles/cv.scss
+++ b/src/pages/page-styles/cv.scss
@@ -26,11 +26,14 @@
       display: flex;
       flex-direction: row;
       column-gap: 2em;
-      margin : auto 0;
+      margin: auto 0;
       padding: 0.5em 0;
 
       img {
-        max-width: 400px;
+        &.large-image {
+          max-width: 60%;
+          cursor: pointer;
+        }
       }
 
       > * {
@@ -44,12 +47,12 @@
           flex-basis: 60%;
         }
       }
-  
+
       .certifications-logos {
         display: flex;
         flex-direction: row;
         column-gap: 1em;
       }
-    }    
+    }
   }
 }
