--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -50,6 +50,7 @@
     @media (width <= 600px) {
       column-gap: 0.5em;
       grid-template-columns: 1fr 1fr 1fr;
+      width: 50%;
     }
 
     > * {
@@ -84,5 +85,9 @@
         }
       }
     }
+  }
+
+  #switch-language {
+    margin: auto 0;
   }
 }
