--- a/src/pages/page-styles/cv.scss
+++ b/src/pages/page-styles/cv.scss
@@ -26,8 +26,15 @@
       display: flex;
       flex-direction: row;
       column-gap: 2em;
-      margin : auto 0;
+      margin: auto 0;
       padding: 0.5em 0;
+
+      img {
+        &.large-image {
+          max-width: 60%;
+          cursor: pointer;
+        }
+      }
 
       > * {
         margin: auto 0;
@@ -39,15 +46,13 @@
         &:last-child {
           flex-basis: 60%;
         }
-        
-        
       }
-  
+
       .certifications-logos {
         display: flex;
         flex-direction: row;
         column-gap: 1em;
       }
-    }    
+    }
   }
 }
