--- a/src/components/blog/templates/TemplateBlogPost.scss
+++ b/src/components/blog/templates/TemplateBlogPost.scss
@@ -50,9 +50,11 @@
 }
 
 @media (width >= 950px) {
-  img {
-    max-width: 600px;
-    max-height: 500px;
+  article {
+    img {
+      max-width: 600px;
+      max-height: 500px;
+    }
   }
 }
 
