--- a/src/components/blog/post/Post.scss
+++ b/src/components/blog/post/Post.scss
@@ -28,6 +28,7 @@
     .blog-thumbnail {
       max-height: 300px;
       max-width: 300px;
+      border-radius: 2%;
     }
 
     @media (width > 700px) {
