--- a/src/components/detailBlock/DetailBlock.scss
+++ b/src/components/detailBlock/DetailBlock.scss
@@ -6,7 +6,8 @@
   border: 2px solid $detail-block-border-color;
   background-color: #a8c9d4;
 
-  > * {
+  .block-title,
+  .detail-info {
     padding: 10px;
   }
 
@@ -15,6 +16,11 @@
     border-right: 1px solid $detail-block-border-color;
     background-color: #96c5d4;
     display: flex;
+    flex-direction: column;
+
+    h4 + br + h4 {
+      margin-top: 0.5em;
+    }
 
     > * {
       text-align: center;
