--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -53,12 +53,12 @@
       width: 50%;
     }
 
-    > * {
+    > a {
       display: flex;
       align-items: center;
       padding: 0 0.5em;
       height: 100%;
-      border-radius: 4%;
+      border-radius: 2%;
 
       svg {
         margin-right: 0.5em;
