--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -4,10 +4,14 @@
   height: 100%;
   display: flex;
   flex-direction: row;
-  column-gap: 0.5em;
   place-items: center;
   justify-content: space-between;
   padding: 0 3em;
+
+  @media (width <= 600px) {
+    display: grid;
+    grid-template-columns: 1fr 2.5fr;
+  }
 
   a {
     color: $header-text-color;
@@ -16,9 +20,8 @@
 
   h1 {
     font-size: x-large;
-    margin-left: 2em;
-    margin-bottom: 0;
-    flex: 1 1 25%;
+    margin: auto 0 auto 2em;
+    flex: 2 2 40%;
   }
 
   @media (width <= 600px) {
@@ -29,65 +32,72 @@
     }
   }
 
-  #url-list {
-    height: 100%;
+  #right-navbar {
     display: flex;
-    flex-flow: row wrap;
-    place-content: center;
-    flex: 1 1 20%;
+    flex-direction: row;
+    flex: 2 1 60%;
+    height: 100%;
 
-    @media (width <= 1250px) {
-      flex-basis: 55%;
+    @media (width >= 950px) {
+      column-gap: 2.2em;
     }
 
-    @media (width <= 950px) {
-      display: grid;
-      row-gap: 0.2em;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-    }
-
-    @media (width <= 600px) {
-      column-gap: 0.5em;
-      grid-template-columns: 1fr 1fr 1fr;
-      width: 50%;
-    }
-
-    > a {
-      display: flex;
-      align-items: center;
-      padding: 0 0.5em;
+    #url-list {
       height: 100%;
-      border-radius: 2%;
+      display: flex;
+      flex-flow: row;
+      flex: 1 1 50%;
 
-      svg {
-        margin-right: 0.5em;
-      }
-
-      &.active {
-        background-color: #8bb3cc;
-      }
-
-      &:hover {
-        background-color: white;
-      }
-
-      @media (width >= 950px) {
-        flex: 1;
-        justify-content: center;
+      @media (width <= 950px) {
+        display: grid;
+        row-gap: 0.2em;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
       }
 
       @media (width <= 600px) {
-        padding: 0 0.2em;
+        column-gap: 0.2em;
+      }
+
+      > a {
+        display: flex;
+        align-items: center;
+        padding: 0 0.5em;
+        flex: 1;
+        border-radius: 2%;
+
+        @media (width >= 950px) {
+          justify-content: center;
+        }
 
         svg {
-          margin-right: 0.15em;
+          margin-right: 0.5em;
+        }
+
+        &.active {
+          background-color: #8bb3cc;
+        }
+
+        &:hover {
+          background-color: white;
+        }
+
+        @media (width <= 600px) {
+          padding: 0 0.2em;
+
+          svg {
+            margin-right: 0.15em;
+          }
         }
       }
     }
-  }
 
-  #switch-language {
-    margin: auto 0;
+    #switch-language {
+      margin: auto 0;
+
+      img {
+        min-width: 100%;
+      }
+    }
   }
 }
