--- a/assets/global.scss
+++ b/assets/global.scss
@@ -1,11 +1,8 @@
 /* CSS Custom Properties Definitions */
 
 @use '@fontsource/open-sans';
+@import '../styles/colors.scss';
 
-$header-background-color: #2c77a8;
-$header-text-color: black;
-$body-background-color: #dfdddd;
-$detail-block-border-color: #1f5099;
 /* stylelint-disable */
 :root {
   --maxWidth-none: 'none';
