--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -9,6 +9,7 @@ html {
     sans-serif;
   box-sizing: border-box;
   background-color: $body-background-color;
+  overflow-y: hidden !important;
 }
 
 body {
