--- a/assets/global.scss
+++ b/assets/global.scss
@@ -1,10 +1,292 @@
-/* CSS Custom Properties Definitions */
+html {
+  text-size-adjust: 100%;
+  font:
+    112.5%/1.45em georgia,
+    serif,
+    sans-serif;
+  box-sizing: border-box;
+  background-color: $body-background-color;
+  overflow-y: hidden !important;
+}
+
+body {
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: hsl(0deg 0% 0% / 80%);
+  font-family: georgia, serif;
+  font-weight: normal;
+  word-wrap: break-word;
+  font-kerning: normal;
+  font-feature-settings: 'kern', 'liga', 'clig', 'calt';
+}
+
+/* stylelint-disable */
+
+html,
+body,
+#__nuxt,
+.v-application,
+.v-application__wrap,
+.layout-container {
+  height: 100%;
+}
 
 body,
 .v-application {
   font-size: 1rem;
   color: #2e353f;
   background-color: $body-background-color !important;
+}
+
+/* stylelint-enable */
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+main,
+menu,
+nav,
+section,
+summary {
+  display: block;
+}
+
+audio,
+canvas,
+progress,
+video {
+  display: inline-block;
+}
+
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+progress {
+  vertical-align: baseline;
+}
+
+[hidden],
+template {
+  display: none;
+}
+
+a {
+  background-color: transparent;
+  text-decoration-skip: objects;
+  color: #005b99;
+}
+
+a:active,
+a:hover {
+  outline-width: 0;
+}
+
+abbr[title] {
+  border-bottom: 1px dotted hsl(0deg 0% 0% / 50%);
+  cursor: help;
+  text-decoration: none;
+}
+
+b,
+strong {
+  font-weight: inherit;
+  font-weight: bolder;
+}
+
+dfn {
+  font-style: italic;
+}
+
+h1 {
+  margin: 0 0 1.45rem;
+  padding: 0;
+  color: inherit;
+  font-family:
+    sans-serif,
+    'Segoe UI',
+    -apple-system,
+    BlinkMacSystemFont,
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue';
+  font-weight: bold;
+  text-rendering: optimizelegibility;
+  font-size: 2.25rem;
+  line-height: 1.1;
+}
+
+mark {
+  background-color: #ff0;
+  color: #000;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+img {
+  border-style: none;
+  max-width: 100%;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
+  padding: 0;
+}
+
+svg:not(:root) {
+  overflow: hidden;
+}
+
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace;
+  font-size: 1em;
+}
+
+figure {
+  margin: 0 0 1.45rem;
+  padding: 0;
+}
+
+hr {
+  box-sizing: content-box;
+  overflow: visible;
+  margin: 0 0 calc(1.45rem - 1px);
+  padding: 0;
+  background: hsl(0deg 0% 0% / 20%);
+  border: none;
+  height: 1px;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font: inherit;
+  margin: 0;
+}
+
+optgroup {
+  font-weight: 700;
+}
+
+button,
+input {
+  overflow: visible;
+}
+
+button,
+select {
+  text-transform: none;
+}
+
+[type='reset'],
+[type='submit'],
+button,
+html [type='button'] {
+  appearance: button;
+}
+
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner,
+button::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring,
+button:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+fieldset {
+  border: 1px solid silver;
+  margin: 0 0 1.45rem;
+  padding: 0;
+}
+
+legend {
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal;
+}
+
+textarea {
+  overflow: auto;
+}
+
+[type='checkbox'],
+[type='radio'] {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
+  height: auto;
+}
+
+[type='search'] {
+  appearance: textfield;
+  outline-offset: -2px;
+}
+
+[type='search']::-webkit-search-cancel-button,
+[type='search']::-webkit-search-decoration {
+  appearance: none;
+}
+
+::-webkit-file-upload-button {
+  appearance: button;
+  font: inherit;
+}
+
+* {
+  box-sizing: inherit;
+}
+
+*::before {
+  box-sizing: inherit;
+}
+
+*::after {
+  box-sizing: inherit;
 }
 
 h1,
@@ -16,6 +298,198 @@ h6 {
   letter-spacing: -0.025em;
 }
 
-a {
-  color: #005b99;
+h2 {
+  font-size: 1.6267rem;
 }
+
+h3 {
+  font-size: 1.3832rem;
+}
+
+h4 {
+  font-size: 1rem;
+}
+
+h5 {
+  font-size: 0.8503rem;
+}
+
+h6 {
+  font-size: 0.7841rem;
+}
+
+h2,
+h3 {
+  margin: 0 0 1.45rem;
+  padding: 0;
+  color: inherit;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  text-rendering: optimizelegibility;
+  line-height: 1.1;
+}
+
+hgroup {
+  margin: 0 0 1.45rem;
+  padding: 0;
+}
+
+ul,
+ol {
+  margin: 0 0 1.45rem 1.45rem;
+  padding: 0;
+  list-style-position: outside;
+  list-style-image: none;
+}
+
+dl,
+dd,
+p {
+  margin: 0 0 1.45rem;
+  padding: 0;
+}
+
+pre {
+  margin: 0 0 1.45rem;
+  font-size: 0.85rem;
+  line-height: 1.42;
+  background: hsl(0deg 0% 0% / 4%);
+  border-radius: 3px;
+  overflow: auto;
+  word-wrap: normal;
+  padding: 1.45rem;
+}
+
+table {
+  margin: 0 0 1.45rem;
+  padding: 0;
+  font-size: 1rem;
+  line-height: 1.45rem;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+blockquote {
+  margin: 0 1.45rem 1.45rem;
+  padding: 0;
+}
+
+form,
+noscript,
+iframe,
+address {
+  margin: 0 0 1.45rem;
+  padding: 0;
+}
+
+b,
+strong,
+dt,
+th {
+  font-weight: bold;
+}
+
+li {
+  margin-bottom: calc(1.45rem / 2);
+}
+
+ol li,
+ul li {
+  padding-left: 0;
+}
+
+li > ol,
+li > ul {
+  margin-left: 1.45rem;
+  margin-bottom: calc(1.45rem / 2);
+  margin-top: calc(1.45rem / 2);
+}
+
+blockquote *:last-child,
+li *:last-child,
+p *:last-child {
+  margin-bottom: 0;
+}
+
+li > p {
+  margin-bottom: calc(1.45rem / 2);
+}
+
+code,
+kbd,
+samp {
+  font-size: 0.85rem;
+  line-height: 1.45rem;
+}
+
+abbr,
+acronym {
+  border-bottom: 1px dotted hsl(0deg 0% 0% / 50%);
+  cursor: help;
+}
+
+thead {
+  text-align: left;
+}
+
+td,
+th {
+  text-align: left;
+  border-bottom: 1px solid hsl(0deg 0% 0% / 12%);
+  font-feature-settings: 'tnum';
+  padding: 0.725rem 0.9667rem calc(0.725rem - 1px);
+}
+
+th:first-child,
+td:first-child {
+  padding-left: 0;
+}
+
+th:last-child,
+td:last-child {
+  padding-right: 0;
+}
+
+tt,
+code {
+  background-color: hsl(0deg 0% 0% / 4%);
+  border-radius: 3px;
+  font-family: SFMono-Regular, Consolas, 'Roboto Mono', 'Droid Sans Mono', 'Liberation Mono', Menlo, Courier, monospace;
+  padding: 0;
+  padding-top: 0.2em;
+  padding-bottom: 0.2em;
+}
+
+pre code {
+  background: none;
+  line-height: 1.42;
+}
+
+code::before,
+code::after,
+tt::before,
+tt::after {
+  letter-spacing: -0.2em;
+  content: ' ';
+}
+
+pre code::before,
+pre code::after,
+pre tt::before,
+pre tt::after {
+  content: '';
+}
+
+:not(pre) > code,
+pre[class*='language-'] {
+  background: #f5f2f0;
+}
+
+@media only screen and (width <= 480px) {
+  html {
+    font-size: 100%;
+  }
+}
+
+/* CSS Custom Properties Definitions */
