--- a/assets/global.scss
+++ b/assets/global.scss
@@ -18,7 +18,7 @@ body {
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
-  font-feature-settings: 'kern', 'liga', 'clig', 'calt';
+  font-feature-settings: "kern", "liga", "clig", "calt";
 }
 
 /* stylelint-disable */
@@ -110,16 +110,16 @@ h1 {
   color: inherit;
   font-family:
     sans-serif,
-    'Segoe UI',
+    "Segoe UI",
     -apple-system,
     BlinkMacSystemFont,
     Roboto,
     Oxygen,
     Ubuntu,
     Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue';
+    "Fira Sans",
+    "Droid Sans",
+    "Helvetica Neue";
   font-weight: bold;
   text-rendering: optimizelegibility;
   font-size: 2.25rem;
@@ -210,24 +210,24 @@ select {
   text-transform: none;
 }
 
-[type='reset'],
-[type='submit'],
+[type="reset"],
+[type="submit"],
 button,
-html [type='button'] {
+html [type="button"] {
   appearance: button;
 }
 
-[type='button']::-moz-focus-inner,
-[type='reset']::-moz-focus-inner,
-[type='submit']::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner,
 button::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
 
-[type='button']:-moz-focusring,
-[type='reset']:-moz-focusring,
-[type='submit']:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring,
 button:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
@@ -251,24 +251,24 @@ textarea {
   overflow: auto;
 }
 
-[type='checkbox'],
-[type='radio'] {
+[type="checkbox"],
+[type="radio"] {
   box-sizing: border-box;
   padding: 0;
 }
 
-[type='number']::-webkit-inner-spin-button,
-[type='number']::-webkit-outer-spin-button {
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
-[type='search'] {
+[type="search"] {
   appearance: textfield;
   outline-offset: -2px;
 }
 
-[type='search']::-webkit-search-cancel-button,
-[type='search']::-webkit-search-decoration {
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
   appearance: none;
 }
 
@@ -323,8 +323,8 @@ h3 {
   margin: 0 0 1.45rem;
   padding: 0;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   font-weight: bold;
   text-rendering: optimizelegibility;
   line-height: 1.1;
@@ -437,7 +437,7 @@ td,
 th {
   text-align: left;
   border-bottom: 1px solid hsl(0deg 0% 0% / 12%);
-  font-feature-settings: 'tnum';
+  font-feature-settings: "tnum";
   padding: 0.725rem 0.9667rem calc(0.725rem - 1px);
 }
 
@@ -455,7 +455,7 @@ tt,
 code {
   background-color: hsl(0deg 0% 0% / 4%);
   border-radius: 3px;
-  font-family: SFMono-Regular, Consolas, 'Roboto Mono', 'Droid Sans Mono', 'Liberation Mono', Menlo, Courier, monospace;
+  font-family: SFMono-Regular, Consolas, "Roboto Mono", "Droid Sans Mono", "Liberation Mono", Menlo, Courier, monospace;
   padding: 0;
   padding-top: 0.2em;
   padding-bottom: 0.2em;
@@ -471,18 +471,18 @@ code::after,
 tt::before,
 tt::after {
   letter-spacing: -0.2em;
-  content: ' ';
+  content: " ";
 }
 
 pre code::before,
 pre code::after,
 pre tt::before,
 pre tt::after {
-  content: '';
+  content: "";
 }
 
 :not(pre) > code,
-pre[class*='language-'] {
+pre[class*="language-"] {
   background: #f5f2f0;
 }
 
