--- a/assets/global.scss
+++ b/assets/global.scss
@@ -1,100 +1,293 @@
-/* CSS Custom Properties Definitions */
-
-/* stylelint-disable */
-:root {
-  --maxWidth-none: 'none';
-  --maxWidth-xs: 20rem;
-  --maxWidth-sm: 24rem;
-  --maxWidth-md: 28rem;
-  --maxWidth-lg: 32rem;
-  --maxWidth-xl: 36rem;
-  --maxWidth-2xl: 42rem;
-  --maxWidth-3xl: 48rem;
-  --maxWidth-4xl: 56rem;
-  --maxWidth-full: '100%';
-  --maxWidth-wrapper: var(--maxWidth-2xl);
-  --spacing-px: '1px';
-  --spacing-0: 0;
-  --spacing-1: 0.25rem;
-  --spacing-2: 0.5rem;
-  --spacing-3: 0.75rem;
-  --spacing-4: 1rem;
-  --spacing-5: 1.25rem;
-  --spacing-6: 1.5rem;
-  --spacing-8: 2rem;
-  --spacing-10: 2.5rem;
-  --spacing-12: 3rem;
-  --spacing-16: 4rem;
-  --spacing-20: 5rem;
-  --spacing-24: 6rem;
-  --spacing-32: 8rem;
-  --fontFamily-sans: montserrat, system-ui, -apple-system, blinkmacsystemfont, 'Segoe UI', roboto, 'Helvetica Neue',
-    arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  --fontFamily-serif: 'Merriweather', 'Georgia', cambria, 'Times New Roman', times, serif;
-  --font-body: var(--fontFamily-serif);
-  --font-heading: var(--fontFamily-sans);
-  --fontWeight-normal: 400;
-  --fontWeight-medium: 500;
-  --fontWeight-semibold: 600;
-  --fontWeight-bold: 700;
-  --fontWeight-extrabold: 800;
-  --fontWeight-black: 900;
-  --fontSize-root: 16px;
-  --lineHeight-none: 1;
-  --lineHeight-tight: 1.1;
-  --lineHeight-normal: 1.5;
-  --lineHeight-relaxed: 1.625;
-
-  /* 1.200 Minor Third Type Scale */
-  --fontSize-0: 0.833rem;
-  --fontSize-1: 1rem;
-  --fontSize-2: 1.2rem;
-  --fontSize-3: 1.44rem;
-  --fontSize-4: 1.728rem;
-  --fontSize-5: 2.074rem;
-  --fontSize-6: 2.488rem;
-  --fontSize-7: 2.986rem;
-  --color-primary: #005b99;
-  --color-text: #2e353f;
-  --color-text-light: #4f5969;
-  --color-heading: #1a202c;
-  --color-heading-black: black;
-  --color-accent: #d1dce5;
-}
-
-/* HTML elements */
-
-*,
-::after,
-::before {
-  box-sizing: border-box;
-}
-
 html {
-  line-height: var(--lineHeight-normal);
-  font-size: var(--fontSize-root);
+  text-size-adjust: 100%;
+  font:
+    112.5%/1.45em georgia,
+    serif,
+    sans-serif;
+  box-sizing: border-box;
+  background-color: $body-background-color;
+  overflow-y: hidden !important;
+}
+
+body {
+  margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: hsl(0deg 0% 0% / 80%);
+  font-family: georgia, serif;
+  font-weight: normal;
+  word-wrap: break-word;
+  font-kerning: normal;
+  font-feature-settings: "kern", "liga", "clig", "calt";
+}
+
+/* stylelint-disable */
+
+html,
+body,
+#__nuxt,
+.v-application,
+.v-application__wrap,
+.layout-container {
+  height: 100%;
 }
 
 body,
 .v-application {
-  font-size: var(--fontSize-1);
-  color: var(--color-text);
+  font-size: 1rem;
+  color: #2e353f;
   background-color: $body-background-color !important;
 }
 
-footer {
-  padding: var(--spacing-6) var(--spacing-0);
+/* stylelint-enable */
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+main,
+menu,
+nav,
+section,
+summary {
+  display: block;
+}
+
+audio,
+canvas,
+progress,
+video {
+  display: inline-block;
+}
+
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+progress {
+  vertical-align: baseline;
+}
+
+[hidden],
+template {
+  display: none;
+}
+
+a {
+  background-color: transparent;
+  text-decoration-skip: objects;
+  color: #005b99;
+}
+
+a:active,
+a:hover {
+  outline-width: 0;
+}
+
+abbr[title] {
+  border-bottom: 1px dotted hsl(0deg 0% 0% / 50%);
+  cursor: help;
+  text-decoration: none;
+}
+
+b,
+strong {
+  font-weight: inherit;
+  font-weight: bolder;
+}
+
+dfn {
+  font-style: italic;
+}
+
+h1 {
+  margin: 0 0 1.45rem;
+  padding: 0;
+  color: inherit;
+  font-family:
+    sans-serif,
+    "Segoe UI",
+    -apple-system,
+    BlinkMacSystemFont,
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Fira Sans",
+    "Droid Sans",
+    "Helvetica Neue";
+  font-weight: bold;
+  text-rendering: optimizelegibility;
+  font-size: 2.25rem;
+  line-height: 1.1;
+}
+
+mark {
+  background-color: #ff0;
+  color: #000;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+img {
+  border-style: none;
+  max-width: 100%;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
+  padding: 0;
+}
+
+svg:not(:root) {
+  overflow: hidden;
+}
+
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace;
+  font-size: 1em;
+}
+
+figure {
+  margin: 0 0 1.45rem;
+  padding: 0;
 }
 
 hr {
-  background: var(--color-accent);
+  box-sizing: content-box;
+  overflow: visible;
+  margin: 0 0 calc(1.45rem - 1px);
+  padding: 0;
+  background: hsl(0deg 0% 0% / 20%);
+  border: none;
   height: 1px;
-  border: 0;
 }
 
-/* Heading */
+button,
+input,
+optgroup,
+select,
+textarea {
+  font: inherit;
+  margin: 0;
+}
+
+optgroup {
+  font-weight: 700;
+}
+
+button,
+input {
+  overflow: visible;
+}
+
+button,
+select {
+  text-transform: none;
+}
+
+[type="reset"],
+[type="submit"],
+button,
+html [type="button"] {
+  appearance: button;
+}
+
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner,
+button::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring,
+button:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+fieldset {
+  border: 1px solid silver;
+  margin: 0 0 1.45rem;
+  padding: 0;
+}
+
+legend {
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal;
+}
+
+textarea {
+  overflow: auto;
+}
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+[type="search"] {
+  appearance: textfield;
+  outline-offset: -2px;
+}
+
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
+  appearance: none;
+}
+
+::-webkit-file-upload-button {
+  appearance: button;
+  font: inherit;
+}
+
+* {
+  box-sizing: inherit;
+}
+
+*::before {
+  box-sizing: inherit;
+}
+
+*::after {
+  box-sizing: inherit;
+}
 
 h1,
 h2,
@@ -102,219 +295,201 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--font-heading);
-  margin-top: var(--spacing-2);
-  margin-bottom: var(--spacing-6);
-  line-height: var(--lineHeight-tight);
   letter-spacing: -0.025em;
 }
 
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: var(--fontWeight-bold);
-  color: var(--color-heading);
-}
-
-h1 {
-  font-weight: var(--fontWeight-black);
-  font-size: var(--fontSize-6);
-  color: var(--color-heading-black);
-}
-
 h2 {
-  font-size: var(--fontSize-5);
+  font-size: 1.6267rem;
 }
 
 h3 {
-  font-size: var(--fontSize-4);
+  font-size: 1.3832rem;
 }
 
 h4 {
-  font-size: var(--fontSize-3);
+  font-size: 1rem;
 }
 
 h5 {
-  font-size: var(--fontSize-2);
+  font-size: 0.8503rem;
 }
 
 h6 {
-  font-size: var(--fontSize-1);
+  font-size: 0.7841rem;
 }
 
-a {
-  color: var(--color-primary);
-}
-
-h1 > a {
+h2,
+h3 {
+  margin: 0 0 1.45rem;
+  padding: 0;
   color: inherit;
-  text-decoration: none;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
+  font-weight: bold;
+  text-rendering: optimizelegibility;
+  line-height: 1.1;
 }
 
-h2 > a,
-h3 > a,
-h4 > a,
-h5 > a,
-h6 > a {
-  text-decoration: none;
-  color: inherit;
-}
-
-/* Prose */
-
-p {
-  line-height: var(--lineHeight-relaxed);
-
-  --baseline-multiplier: 0.179;
-  --x-height-multiplier: 0.35;
-
-  margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
-  padding: var(--spacing-0);
+hgroup {
+  margin: 0 0 1.45rem;
+  padding: 0;
 }
 
 ul,
 ol {
-  margin-left: var(--spacing-0);
-  margin-right: var(--spacing-0);
-  padding: var(--spacing-0);
-  margin-bottom: var(--spacing-8);
+  margin: 0 0 1.45rem 1.45rem;
+  padding: 0;
   list-style-position: outside;
   list-style-image: none;
 }
 
-ul li,
-ol li {
-  padding-left: var(--spacing-0);
-  margin-bottom: calc(var(--spacing-8) / 2);
+dl,
+dd,
+p {
+  margin: 0 0 1.45rem;
+  padding: 0;
 }
 
-li > p {
-  margin-bottom: calc(var(--spacing-8) / 2);
-}
-
-li *:last-child {
-  margin-bottom: var(--spacing-0);
-}
-
-li > ul {
-  margin-left: var(--spacing-8);
-  margin-top: calc(var(--spacing-8) / 2);
-}
-
-blockquote {
-  color: var(--color-text-light);
-  margin-left: calc(-1 * var(--spacing-6));
-  margin-right: var(--spacing-8);
-  padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-6);
-  border-left: var(--spacing-1) solid var(--color-primary);
-  font-size: var(--fontSize-2);
-  font-style: italic;
-  margin-bottom: var(--spacing-8);
-}
-
-blockquote > :last-child {
-  margin-bottom: var(--spacing-0);
-}
-
-blockquote > ul,
-blockquote > ol {
-  list-style-position: inside;
+pre {
+  margin: 0 0 1.45rem;
+  font-size: 0.85rem;
+  line-height: 1.42;
+  background: hsl(0deg 0% 0% / 4%);
+  border-radius: 3px;
+  overflow: auto;
+  word-wrap: normal;
+  padding: 1.45rem;
 }
 
 table {
-  width: 100%;
-  margin-bottom: var(--spacing-8);
+  margin: 0 0 1.45rem;
+  padding: 0;
+  font-size: 1rem;
+  line-height: 1.45rem;
   border-collapse: collapse;
-  border-spacing: 0.25rem;
+  width: 100%;
 }
 
-table thead tr th {
-  border-bottom: 1px solid var(--color-accent);
+blockquote {
+  margin: 0 1.45rem 1.45rem;
+  padding: 0;
 }
 
-/* Link */
-
-a:hover,
-a:focus {
-  text-decoration: none;
+form,
+noscript,
+iframe,
+address {
+  margin: 0 0 1.45rem;
+  padding: 0;
 }
 
-/* Custom classes */
-
-.global-wrapper {
-  margin: var(--spacing-0) auto;
-  max-width: var(--maxWidth-wrapper);
-  padding: var(--spacing-10) var(--spacing-5);
+b,
+strong,
+dt,
+th {
+  font-weight: bold;
 }
 
-.bio {
-  display: flex;
-  margin-bottom: var(--spacing-16);
+li {
+  margin-bottom: calc(1.45rem / 2);
 }
 
-.global-wrapper[data-is-root-path='true'] .bio {
-  margin-bottom: var(--spacing-20);
+ol li,
+ul li {
+  padding-left: 0;
 }
 
-.global-header {
-  margin-bottom: var(--spacing-12);
+li > ol,
+li > ul {
+  margin-left: 1.45rem;
+  margin-bottom: calc(1.45rem / 2);
+  margin-top: calc(1.45rem / 2);
 }
 
-.main-heading {
-  font-size: var(--fontSize-7);
-  margin: 0;
+blockquote *:last-child,
+li *:last-child,
+p *:last-child {
+  margin-bottom: 0;
 }
 
-.header-link-home {
-  font-weight: var(--fontWeight-bold);
-  font-family: var(--font-heading);
-  text-decoration: none;
-  font-size: var(--fontSize-2);
+li > p {
+  margin-bottom: calc(1.45rem / 2);
 }
 
-.bio p {
-  margin-bottom: var(--spacing-0);
+code,
+kbd,
+samp {
+  font-size: 0.85rem;
+  line-height: 1.45rem;
 }
 
-.bio-avatar {
-  margin-right: var(--spacing-4);
-  margin-bottom: var(--spacing-0);
-  min-width: 50px;
-  border-radius: 100%;
+abbr,
+acronym {
+  border-bottom: 1px dotted hsl(0deg 0% 0% / 50%);
+  cursor: help;
 }
 
-.blog-post header h1 {
-  margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
+thead {
+  text-align: left;
 }
 
-.blog-post header p {
-  font-size: var(--fontSize-2);
-  font-family: var(--font-heading);
+td,
+th {
+  text-align: left;
+  border-bottom: 1px solid hsl(0deg 0% 0% / 12%);
+  font-feature-settings: "tnum";
+  padding: 0.725rem 0.9667rem calc(0.725rem - 1px);
 }
 
-.blog-post-nav ul {
-  margin: var(--spacing-0);
+th:first-child,
+td:first-child {
+  padding-left: 0;
 }
 
-.gatsby-highlight {
-  margin-bottom: var(--spacing-8);
+th:last-child,
+td:last-child {
+  padding-right: 0;
 }
 
-/* Media queries */
+tt,
+code {
+  background-color: hsl(0deg 0% 0% / 4%);
+  border-radius: 3px;
+  font-family: SFMono-Regular, Consolas, "Roboto Mono", "Droid Sans Mono", "Liberation Mono", Menlo, Courier, monospace;
+  padding: 0;
+  padding-top: 0.2em;
+  padding-bottom: 0.2em;
+}
 
-@media (max-width: 42rem) {
-  blockquote {
-    padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-4);
-    margin-left: var(--spacing-0);
+pre code {
+  background: none;
+  line-height: 1.42;
+}
+
+code::before,
+code::after,
+tt::before,
+tt::after {
+  letter-spacing: -0.2em;
+  content: " ";
+}
+
+pre code::before,
+pre code::after,
+pre tt::before,
+pre tt::after {
+  content: "";
+}
+
+:not(pre) > code,
+pre[class*="language-"] {
+  background: #f5f2f0;
+}
+
+@media only screen and (width <= 480px) {
+  html {
+    font-size: 100%;
   }
+}
 
-  ul,
-  ol {
-    list-style-position: inside;
-  }
-}
-a {
-}
-/* stylelint-enable */
+/* CSS Custom Properties Definitions */
